Add jSpecify node.setup.web package.